# flowscript-agents

./: .gitignore  AUDIT_TRAIL_DESIGN.md  README.md  e2e_compliance_chain.py  pyproject.toml  validate_autonomous_agent.py  validate_wrapper.py
.github/workflows/: test.yml
docs/: adapters.md  api-reference.md  audit-trail.md  lifecycle.md
examples/: CLAUDE.md.example  langgraph_live_test.py  temporal_e2e_test.py
flowscript_agents/: __init__.py  audit.py  camel_ai.py  client.py  cloud.py  continuity.py  crewai.py  explain.py  fixpoint.py  google_adk.py  haystack.py  langgraph.py  llamaindex.py  mcp.py  memory.py  openai_agents.py  pydantic_ai.py  query.py  smolagents.py  tool-integrity.json  types.py  unified.py
flowscript_agents/embeddings/: __init__.py  _utils.py  consolidate.py  extract.py  index.py  providers.py  search.py
guides/: recommended_claude_md.md
scripts/: validate_dedup_threshold.py
tests/: conftest.py  test_audit.py  test_camel_ai.py  test_client.py  test_cloud.py  test_cloud_fixpoint.py  test_consolidation.py  test_continuity.py  test_crewai.py  test_embeddings.py  test_explain.py  test_fixpoint.py  test_google_adk.py  test_haystack.py  test_integration_continuity.py  test_langgraph.py  test_llamaindex.py  test_mcp.py  test_memory.py  test_openai_agents.py  test_pydantic_ai.py  test_smolagents.py  test_temporal.py
