[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowscript-agents"
version = "0.1.0"
description = "FlowScript integrations for AI agent frameworks. Decision intelligence memory for LangGraph, CrewAI, Google ADK, and OpenAI Agents SDK."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Phillip Clapham", email = "me@phillipclapham.com" }
]
keywords = [
    "flowscript",
    "agent-memory",
    "decision-intelligence",
    "langgraph",
    "crewai",
    "google-adk",
    "openai-agents",
    "llm",
    "ai-agents"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "flowscript-ldp>=0.2.1",
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.2.0", "langgraph-checkpoint>=2.0.0"]
crewai = ["crewai>=0.80.0"]
google-adk = ["google-adk>=1.0.0"]
openai-agents = ["openai-agents>=0.1.0"]
all = [
    "langgraph>=0.2.0",
    "langgraph-checkpoint>=2.0.0",
    "crewai>=0.80.0",
    "google-adk>=1.0.0",
    "openai-agents>=0.1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://flowscript.org"
Repository = "https://github.com/phillipclapham/flowscript-agents"
Issues = "https://github.com/phillipclapham/flowscript-agents/issues"
Documentation = "https://flowscript.org"

[tool.hatch.build.targets.wheel]
packages = ["flowscript_agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
