[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowscript-agents"
version = "0.4.1"
description = "Complete agent memory: reasoning queries + vector search + auto-extraction. Decision intelligence for LangGraph, CrewAI, Google ADK, OpenAI Agents SDK, Pydantic AI, smolagents, LlamaIndex, Haystack, and CAMEL-AI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Phillip Clapham", email = "me@phillipclapham.com" }
]
keywords = [
    "flowscript",
    "agent-memory",
    "decision-intelligence",
    "langgraph",
    "langchain",
    "crewai",
    "google-adk",
    "openai-agents",
    "pydantic-ai",
    "smolagents",
    "llamaindex",
    "llama-index",
    "haystack",
    "camel-ai",
    "llm",
    "ai-agents",
    "vector-search",
    "embeddings",
    "unified-memory",
    "mem0-alternative"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.2.0", "langgraph-checkpoint>=2.0.0"]
crewai = ["crewai>=0.80.0"]
google-adk = ["google-adk>=1.25.0"]
openai-agents = ["openai-agents>=0.1.0"]
pydantic-ai = ["pydantic-ai>=0.1.0"]
smolagents = ["smolagents>=1.0.0"]
llamaindex = ["llama-index-core>=0.12.0"]
haystack = ["haystack-ai>=2.0.0"]
camel-ai = ["camel-ai>=0.2.0"]
# Embedding providers for unified memory
openai-embeddings = ["openai>=1.0.0"]
local-embeddings = ["sentence-transformers>=2.0.0"]
all-embeddings = ["openai>=1.0.0", "sentence-transformers>=2.0.0"]
all = [
    "langgraph>=0.2.0",
    "langgraph-checkpoint>=2.0.0",
    "crewai>=0.80.0",
    "google-adk>=1.25.0",
    "openai-agents>=0.1.0",
    "pydantic-ai>=0.1.0",
    "smolagents>=1.0.0",
    "llama-index-core>=0.12.0",
    "haystack-ai>=2.0.0",
    "camel-ai>=0.2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
flowscript-mcp = "flowscript_agents.mcp:main"

[project.urls]
Homepage = "https://flowscript.org"
Repository = "https://github.com/phillipclapham/flowscript-agents"
Issues = "https://github.com/phillipclapham/flowscript-agents/issues"
Documentation = "https://flowscript.org"

[tool.hatch.build.targets.wheel]
packages = ["flowscript_agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
